fix: SearchBar z-index

--- a/components/p_home/SearchBar.module.css
+++ b/components/p_home/SearchBar.module.css
@@ -13,6 +13,7 @@
     rgba(30, 11, 11, 0) 19%,
     rgba(0, 0, 0, 0.31)
   );
+  z-index: 1;
 }
 
 .search {
